commit colab notebook

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -2,35 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torchvision.transforms as transforms\n",
     "import torchvision.datasets as dset\n",
     "import torch\n",
-    "import torch.nn\n",
+    "import torch.nn as nn\n",
     "import numpy as np \n",
     "import struct\n",
     "import matplotlib.pyplot as plt\n",
     "from torch.utils.data import Dataset\n",
-    "from facenet_model import *\n",
+    "# from facenet_model import *\n",
     "import torch.optim as optim\n",
     "import tqdm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!cp /content/M"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,48 +103,210 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Model def"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class FaceNet(nn.Module):\n",
+    "    \n",
+    "    def __init__(self, dropout:float, dropout_inter:float,init_weights:bool):\n",
+    "        super(FaceNet, self).__init__()\n",
+    "        # self.conv1=nn.Conv2d(3,64,kernel_size= 7,stride=2, padding=3)\n",
+    "        # self.maxpool1=nn.MaxPool2d(3, stride=2)\n",
+    "        self.conv1=ConvModule(3,3,1,1,0)#56\n",
+    "        self.conv2=ConvModule(3,64,1,1,0)#56\n",
+    "        self.conv3=ConvModule(64,192,3,1,1)\n",
+    "        self.maxpool1=nn.MaxPool2d(3,2,1)#28\n",
+    "        self.inception1a=InceptionModule(192,64,96,128,16,32,32)#28\n",
+    "        self.inception1b=InceptionModule(256,128,128,192,32,96,64)#28\n",
+    "        self.maxpool2=nn.MaxPool2d(3,2,1)#14\n",
+    "\n",
+    "        self.inception2a=InceptionModule(480,192,96,208,16,48,64)#14\n",
+    "        self.inception2b=InceptionModule(512,160,112,224,24,64,64)\n",
+    "        self.inception2c=InceptionModule(512,128,128,256,24,64,64)\n",
+    "        self.inception2d=InceptionModule(512,112,144,288,32,64,64)\n",
+    "        self.inception2e=InceptionModule(528,256,160,320,32,128,128)#14\n",
+    "        self.maxpool3=nn.MaxPool2d(3,2,1)#7\n",
+    "\n",
+    "        self.inception3a=InceptionModule(832,256,160,320,32,128,128)\n",
+    "        self.inception3b=InceptionModule(832,384,192,384,48,128,128)\n",
+    "\n",
+    "        self.avgpool= nn.AdaptiveAvgPool2d((1,1))\n",
+    "        self.dropout = nn.Dropout(p=dropout)\n",
+    "        self.fc = nn.Linear(1024, 1)\n",
+    "\n",
+    "        self.inter1=InceptionInterModule(512,dropout_inter)\n",
+    "        self.inter2=InceptionInterModule(528,dropout_inter)\n",
+    "\n",
+    "        if init_weights:\n",
+    "            for m in self.modules():\n",
+    "                if isinstance(m, nn.Conv2d) or isinstance(m, nn.Linear):\n",
+    "                    torch.nn.init.trunc_normal_(m.weight, mean=0.0, std=0.01, a=-2, b=2)\n",
+    "                elif isinstance(m, nn.BatchNorm2d):\n",
+    "                    nn.init.constant_(m.weight, 1)\n",
+    "                    nn.init.constant_(m.bias, 0)\n",
+    "\n",
+    "    def forward(self,x:torch.Tensor,train:bool):\n",
+    "        #Nx3x56x56\n",
+    "        x=self.conv1(x)\n",
+    "        #Nx3x56x56\n",
+    "        x=self.conv2(x)\n",
+    "        #Nx64x56x56\n",
+    "        x=self.conv3(x)\n",
+    "        #Nx192x56x56\n",
+    "        x=self.maxpool1(x)\n",
+    "        #Nx192x28x28\n",
+    "        x=self.inception1a(x)\n",
+    "        #Nx256x28x28\n",
+    "        x=self.inception1b(x)\n",
+    "        #Nx480x28x28\n",
+    "        x=self.maxpool2(x)\n",
+    "        #Nx480x14x14\n",
+    "        x=self.inception2a(x)\n",
+    "        #Nx512x14x14\n",
+    "        if train:\n",
+    "            aux1=self.inter1(x)#Nx1\n",
+    "        else:\n",
+    "            aux1=None\n",
+    "        x=self.inception2b(x)\n",
+    "        #Nx512x14x14\n",
+    "        x=self.inception2c(x)\n",
+    "        #Nx512x14x14\n",
+    "        x=self.inception2d(x)\n",
+    "        #Nx528x14x14\n",
+    "        if train:\n",
+    "            aux2=self.inter2(x)#Nx1\n",
+    "        else:\n",
+    "            aux2=None\n",
+    "        x=self.inception2e(x)\n",
+    "        #Nx832x14x14\n",
+    "        x=self.maxpool3(x)\n",
+    "        #Nx832x7x7\n",
+    "        x=self.inception3a(x)\n",
+    "        #Nx832x7x7\n",
+    "        x=self.inception3b(x)\n",
+    "        #Nx1024x7x7\n",
+    "        x=self.avgpool(x)\n",
+    "        #Nx1024x1x1\n",
+    "        x=nn.Flatten()(x)\n",
+    "        #Nx1024\n",
+    "        x=self.dropout(x)\n",
+    "        #Nx1024\n",
+    "        x=self.fc(x)\n",
+    "        #Nx1\n",
+    "        x=nn.Sigmoid()(x)\n",
+    "        #Nx1\n",
+    "        return x,aux1,aux2\n",
+    "\n",
+    "\n",
+    "\n",
+    "class ConvModule(nn.Module):\n",
+    "\n",
+    "    def __init__(self, in_c: int, out_c: int, kernel_size: int, stride: int, padding= int):\n",
+    "        super(ConvModule, self).__init__()\n",
+    "        self.conv = nn.Conv2d(in_c, out_c, kernel_size, stride, padding,  bias=False)\n",
+    "        self.batchnorm = nn.BatchNorm2d(out_c, eps=0.001)\n",
+    "        self.relu= nn.ReLU()\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        x = self.conv(x)\n",
+    "        x = self.batchnorm(x)\n",
+    "        x = self.relu(x)\n",
+    "        return x\n",
+    "\n",
+    "\n",
+    "\n",
+    "class L2Pooling(nn.Module):\n",
+    "\n",
+    "    def __init__(self, kernel_size: int, stride: int, padding= int):\n",
+    "        super(L2Pooling, self).__init__()\n",
+    "        self.pool = nn.AvgPool2d(kernel_size=kernel_size, stride=stride,padding=padding)\n",
+    "\n",
+    "    def forward(self, x: torch.Tensor):\n",
+    "        return torch.sqrt(self.pool(x ** 2))\n",
+    "\n",
+    "\n",
+    "\n",
+    "class InceptionModule(nn.Module):\n",
+    "\n",
+    "    def __init__(self, in_c: int, ch1: int, ch3_red: int, ch3: int, ch5_red: int, ch5: int, chpool: int):\n",
+    "\n",
+    "        super(InceptionModule, self).__init__()\n",
+    "        self.branch1=ConvModule(in_c,ch1,kernel_size=1,stride=1,padding=0)\n",
+    "        self.branch2=nn.Sequential(\n",
+    "            ConvModule(in_c,ch3_red,kernel_size=1,stride=1,padding=0),\n",
+    "            ConvModule(ch3_red,ch3,kernel_size=3,stride=1,padding=1)\n",
+    "        )\n",
+    "        self.branch3=nn.Sequential(\n",
+    "            ConvModule(in_c,ch5_red,kernel_size=1,stride=1,padding=0),\n",
+    "            ConvModule(ch5_red,ch5,kernel_size=5,stride=1,padding=2)\n",
+    "        )\n",
+    "        self.branch4=nn.Sequential(\n",
+    "            L2Pooling(kernel_size=3,stride=1, padding=1),\n",
+    "            ConvModule(in_c,chpool,kernel_size=1,stride=1,padding=0)\n",
+    "        )\n",
+    "    \n",
+    "    def forward(self,x: torch.Tensor):\n",
+    "        branch1= self.branch1(x)\n",
+    "        branch2= self.branch2(x)\n",
+    "        branch3= self.branch3(x)\n",
+    "        branch4= self.branch4(x)\n",
+    "        return torch.cat([branch1,branch2,branch3,branch4],1)\n",
+    "\n",
+    "class InceptionInterModule(nn.Module):\n",
+    "    def __init__(self, in_c: int, dropout: float):\n",
+    "        super(InceptionInterModule, self).__init__()\n",
+    "        self.out=nn.Sequential(\n",
+    "            nn.AdaptiveAvgPool2d((4,4)),\n",
+    "            ConvModule(in_c,128,kernel_size=1,stride=1,padding=0),\n",
+    "            nn.Flatten(),\n",
+    "            nn.Linear(2048,1024),\n",
+    "            nn.ReLU(True),\n",
+    "            nn.Dropout(p=dropout),\n",
+    "            nn.Linear(1024,1),\n",
+    "            nn.Sigmoid()\n",
+    "        )\n",
+    "\n",
+    "    def forward(self,x: torch.Tensor):\n",
+    "        x=self.out(x)\n",
+    "        return x\n",
+    "        \n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "device= torch.device(\"cuda:0\")"
+    "device= torch.device(\"cpu\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "Torch not compiled with CUDA enabled",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [128], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m facenet\u001b[39m=\u001b[39mFaceNet(\u001b[39m0.2\u001b[39;49m,\u001b[39m0.7\u001b[39;49m,\u001b[39mTrue\u001b[39;49;00m)\u001b[39m.\u001b[39;49mto(device)\n",
-      "File \u001b[1;32mc:\\Users\\Edouard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\nn\\modules\\module.py:987\u001b[0m, in \u001b[0;36mModule.to\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m    983\u001b[0m         \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39mto(device, dtype \u001b[39mif\u001b[39;00m t\u001b[39m.\u001b[39mis_floating_point() \u001b[39mor\u001b[39;00m t\u001b[39m.\u001b[39mis_complex() \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    984\u001b[0m                     non_blocking, memory_format\u001b[39m=\u001b[39mconvert_to_format)\n\u001b[0;32m    985\u001b[0m     \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39mto(device, dtype \u001b[39mif\u001b[39;00m t\u001b[39m.\u001b[39mis_floating_point() \u001b[39mor\u001b[39;00m t\u001b[39m.\u001b[39mis_complex() \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m, non_blocking)\n\u001b[1;32m--> 987\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_apply(convert)\n",
-      "File \u001b[1;32mc:\\Users\\Edouard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\nn\\modules\\module.py:639\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn)\u001b[0m\n\u001b[0;32m    637\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_apply\u001b[39m(\u001b[39mself\u001b[39m, fn):\n\u001b[0;32m    638\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren():\n\u001b[1;32m--> 639\u001b[0m         module\u001b[39m.\u001b[39;49m_apply(fn)\n\u001b[0;32m    641\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[0;32m    642\u001b[0m         \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[0;32m    643\u001b[0m             \u001b[39m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[0;32m    644\u001b[0m             \u001b[39m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    649\u001b[0m             \u001b[39m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[0;32m    650\u001b[0m             \u001b[39m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Edouard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\nn\\modules\\module.py:639\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn)\u001b[0m\n\u001b[0;32m    637\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_apply\u001b[39m(\u001b[39mself\u001b[39m, fn):\n\u001b[0;32m    638\u001b[0m     \u001b[39mfor\u001b[39;00m module \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mchildren():\n\u001b[1;32m--> 639\u001b[0m         module\u001b[39m.\u001b[39;49m_apply(fn)\n\u001b[0;32m    641\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39mcompute_should_use_set_data\u001b[39m(tensor, tensor_applied):\n\u001b[0;32m    642\u001b[0m         \u001b[39mif\u001b[39;00m torch\u001b[39m.\u001b[39m_has_compatible_shallow_copy_type(tensor, tensor_applied):\n\u001b[0;32m    643\u001b[0m             \u001b[39m# If the new tensor has compatible tensor type as the existing tensor,\u001b[39;00m\n\u001b[0;32m    644\u001b[0m             \u001b[39m# the current behavior is to change the tensor in-place using `.data =`,\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    649\u001b[0m             \u001b[39m# global flag to let the user control whether they want the future\u001b[39;00m\n\u001b[0;32m    650\u001b[0m             \u001b[39m# behavior of overwriting the existing tensor or not.\u001b[39;00m\n",
-      "File \u001b[1;32mc:\\Users\\Edouard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\nn\\modules\\module.py:662\u001b[0m, in \u001b[0;36mModule._apply\u001b[1;34m(self, fn)\u001b[0m\n\u001b[0;32m    658\u001b[0m \u001b[39m# Tensors stored in modules are graph leaves, and we don't want to\u001b[39;00m\n\u001b[0;32m    659\u001b[0m \u001b[39m# track autograd history of `param_applied`, so we have to use\u001b[39;00m\n\u001b[0;32m    660\u001b[0m \u001b[39m# `with torch.no_grad():`\u001b[39;00m\n\u001b[0;32m    661\u001b[0m \u001b[39mwith\u001b[39;00m torch\u001b[39m.\u001b[39mno_grad():\n\u001b[1;32m--> 662\u001b[0m     param_applied \u001b[39m=\u001b[39m fn(param)\n\u001b[0;32m    663\u001b[0m should_use_set_data \u001b[39m=\u001b[39m compute_should_use_set_data(param, param_applied)\n\u001b[0;32m    664\u001b[0m \u001b[39mif\u001b[39;00m should_use_set_data:\n",
-      "File \u001b[1;32mc:\\Users\\Edouard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\nn\\modules\\module.py:985\u001b[0m, in \u001b[0;36mModule.to.<locals>.convert\u001b[1;34m(t)\u001b[0m\n\u001b[0;32m    982\u001b[0m \u001b[39mif\u001b[39;00m convert_to_format \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mand\u001b[39;00m t\u001b[39m.\u001b[39mdim() \u001b[39min\u001b[39;00m (\u001b[39m4\u001b[39m, \u001b[39m5\u001b[39m):\n\u001b[0;32m    983\u001b[0m     \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39mto(device, dtype \u001b[39mif\u001b[39;00m t\u001b[39m.\u001b[39mis_floating_point() \u001b[39mor\u001b[39;00m t\u001b[39m.\u001b[39mis_complex() \u001b[39melse\u001b[39;00m \u001b[39mNone\u001b[39;00m,\n\u001b[0;32m    984\u001b[0m                 non_blocking, memory_format\u001b[39m=\u001b[39mconvert_to_format)\n\u001b[1;32m--> 985\u001b[0m \u001b[39mreturn\u001b[39;00m t\u001b[39m.\u001b[39;49mto(device, dtype \u001b[39mif\u001b[39;49;00m t\u001b[39m.\u001b[39;49mis_floating_point() \u001b[39mor\u001b[39;49;00m t\u001b[39m.\u001b[39;49mis_complex() \u001b[39melse\u001b[39;49;00m \u001b[39mNone\u001b[39;49;00m, non_blocking)\n",
-      "File \u001b[1;32mc:\\Users\\Edouard\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\torch\\cuda\\__init__.py:221\u001b[0m, in \u001b[0;36m_lazy_init\u001b[1;34m()\u001b[0m\n\u001b[0;32m    217\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\n\u001b[0;32m    218\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m    219\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mmultiprocessing, you must use the \u001b[39m\u001b[39m'\u001b[39m\u001b[39mspawn\u001b[39m\u001b[39m'\u001b[39m\u001b[39m start method\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    220\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mhasattr\u001b[39m(torch\u001b[39m.\u001b[39m_C, \u001b[39m'\u001b[39m\u001b[39m_cuda_getDeviceCount\u001b[39m\u001b[39m'\u001b[39m):\n\u001b[1;32m--> 221\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mTorch not compiled with CUDA enabled\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m    222\u001b[0m \u001b[39mif\u001b[39;00m _cudart \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m    223\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mAssertionError\u001b[39;00m(\n\u001b[0;32m    224\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[1;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "facenet=FaceNet(0.2,0.7,True).to(device)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,15 +348,16 @@
     "for epoch in tqdm.tqdm(range(num_epochs)):\n",
     "    L_t=[]\n",
     "    L_v=[]\n",
+    "    cpt=0\n",
     "    facenet.train()\n",
-    "    for i, dataj in enumerate(dataloader_t, 0):\n",
+    "    for i, dataj in (enumerate(dataloader_t, 0)):\n",
     "        facenet.zero_grad()\n",
     "        x=dataj[0].float().to(device)\n",
     "        yh=dataj[1].float().to(device)\n",
     "        y,aux1,aux2=facenet(x)\n",
-    "        loss=lossfunction(x,yh)\n",
-    "        loss_aux1=lossfunction(aux1,yh)\n",
-    "        loss_aux2=lossfunction(aux2,yh)\n",
+    "        loss=lossfunction(y.view(-1),yh)\n",
+    "        loss_aux1=lossfunction(aux1.view(-1),yh)\n",
+    "        loss_aux2=lossfunction(aux2.view(-1),yh)\n",
     "        total_loss=(loss+alpha1*loss_aux1+alpha2*loss_aux2)/(1+alpha1+alpha2)\n",
     "        total_loss.backward()\n",
     "        optimizer.step()\n",
@@ -212,9 +366,10 @@
     "    for i, dataj in enumerate(dataloader_v, 0):\n",
     "        x=dataj[0].float().to(device)\n",
     "        yh=dataj[1].float().to(device)\n",
-    "        y,aux1,aux2=facenet(x)\n",
-    "        loss=lossfunction(x,yh)\n",
-    "        L_v.append(loss)\n",
+    "        y=facenet(x)\n",
+    "        loss=lossfunction(y.view(-1),yh)\n",
+    "        L_v.append(loss.item())\n",
+    "    \n",
     "    err_t=np.mean(L_t,0)\n",
     "    err_v=np.mean(L_v,0)\n",
     "    Loss_train.append(err_t)\n",
