commit colab notebook

--- a/Training_colab.ipynb
+++ b/Training_colab.ipynb
@@ -2,60 +2,39 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "# Import"
-      ],
       "metadata": {
         "id": "EPlgz_B1gEZ_"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "!git clone https://github.com/Edouard99/Idemia.git"
-      ],
-      "metadata": {
-        "id": "aksT0A8XZSkt",
-        "outputId": "33a607dc-388e-4847-e1f7-fac9575a52b0",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
       },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Cloning into 'Idemia'...\n",
-            "remote: Enumerating objects: 17, done.\u001b[K\n",
-            "remote: Counting objects: 100% (17/17), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (10/10), done.\u001b[K\n",
-            "remote: Total 17 (delta 6), reused 12 (delta 4), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (17/17), done.\n"
-          ]
-        }
+      "source": [
+        "# Import"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
-        "id": "oFqqO8EYZIpm",
-        "outputId": "ce016a85-7aa7-46c1-b737-0f9bd044f6d3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "aksT0A8XZSkt",
+        "outputId": "33a607dc-388e-4847-e1f7-fac9575a52b0"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/gdrive\n"
-          ]
-        }
-      ],
+      "outputs": [],
+      "source": [
+        "!git clone https://github.com/Edouard99/Idemia.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oFqqO8EYZIpm",
+        "outputId": "ce016a85-7aa7-46c1-b737-0f9bd044f6d3"
+      },
+      "outputs": [],
       "source": [
         "import torchvision.transforms as transforms\n",
         "import torchvision.datasets as dset\n",
@@ -172,8 +151,8 @@
       },
       "outputs": [],
       "source": [
-        "dataloader_t = torch.utils.data.DataLoader(train_ds,batch_size=32,shuffle=True,drop_last=True)\n",
-        "dataloader_v = torch.utils.data.DataLoader(val_ds,batch_size=32,shuffle=True,drop_last=True)"
+        "dataloader_t = torch.utils.data.DataLoader(train_ds,batch_size=32,shuffle=True,drop_last=False)\n",
+        "dataloader_v = torch.utils.data.DataLoader(val_ds,batch_size=32,shuffle=True,drop_last=False)"
       ]
     },
     {
@@ -187,14 +166,14 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "device= torch.device(\"cuda:0\")"
-      ],
+      "execution_count": 14,
       "metadata": {
         "id": "zCsZwuhUjKFL"
       },
-      "execution_count": 14,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "device= torch.device(\"cuda:0\")"
+      ]
     },
     {
       "cell_type": "code",
@@ -216,9 +195,10 @@
       "outputs": [],
       "source": [
         "optimizer = optim.Adam(facenet.parameters(), lr=3e-4, betas=(0.9, 0.999))\n",
+        "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=4, gamma=0.8,verbose=True)\n",
         "alpha1=0.2\n",
         "alpha2=0.2\n",
-        "num_epochs=7"
+        "num_epochs=3"
       ]
     },
     {
@@ -246,121 +226,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
-        "id": "m8aDv9K8ZIp6",
-        "outputId": "391c3a22-66a8-4407-97a7-459e86cdadf6",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "m8aDv9K8ZIp6",
+        "outputId": "391c3a22-66a8-4407-97a7-459e86cdadf6"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            " 14%|█▍        | 1/7 [03:49<22:59, 229.97s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Erreur Training [0.40539908 0.42237661 0.41708005 0.40949316] \t Erreur Val 0.34692335743956637\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 29%|██▊       | 2/7 [07:39<19:09, 229.96s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Erreur Training [0.30606514 0.31473397 0.31385493 0.30841638] \t Erreur Val 0.27852292144421303\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 43%|████▎     | 3/7 [11:30<15:21, 230.33s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Erreur Training [0.26271005 0.27529247 0.26868279 0.26536079] \t Erreur Val 0.2354310997173019\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 57%|█████▋    | 4/7 [15:22<11:32, 230.81s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Erreur Training [0.24641797 0.25846378 0.25163862 0.24888461] \t Erreur Val 0.24497054385956218\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 71%|███████▏  | 5/7 [19:12<07:41, 230.50s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Erreur Training [0.23406804 0.24683694 0.2411181  0.23689933] \t Erreur Val 0.23792089540796832\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\r 86%|████████▌ | 6/7 [23:03<03:50, 230.72s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Erreur Training [0.22227821 0.23423713 0.22762933 0.22475108] \t Erreur Val 0.21293882679879322\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "100%|██████████| 7/7 [26:55<00:00, 230.82s/it]"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Erreur Training [0.21559238 0.22787673 0.2221547  0.21828477] \t Erreur Val 0.2095850691738114\n"
-          ]
-        },
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "Loss_train=[]\n",
         "Loss_val=[]\n",
@@ -388,16 +262,62 @@
         "        y=facenet(x)\n",
         "        loss=lossfunction(y.view(-1),yh)\n",
         "        L_v.append(loss.item())\n",
-        "    \n",
+        "    scheduler.step()\n",
         "    err_t=np.mean(L_t,0)\n",
         "    err_v=np.mean(L_v,0)\n",
         "    Loss_train.append(err_t)\n",
         "    Loss_val.append(err_v)\n",
         "    print(\"Erreur Training {} \\t Erreur Val {}\".format(err_t,err_v))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "threshold=0.5\n",
+        "facenet.eval()\n",
+        "tp,fn,tn,fp=0,0,0,0\n",
+        "for dataj in enumerate(dataloader_t):\n",
+        "    x=dataj[0].float().to(device)\n",
+        "    yh=dataj[1].float().to(device)\n",
+        "    y=facenet(x).view(-1)\n",
+        "    pred=y>threshold\n",
+        "    gt=yh\n",
+        "    tp+=torch.sum(((y>0.5)==gt)[torch.where((gt)==1)]).item()#TP\n",
+        "    fn+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==1)]).item()#FN\n",
+        "    tn+=torch.sum(((y>0.5)==gt)[torch.where((gt)==0)]).item()#TN\n",
+        "    fp+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==0)]).item()#FP\n",
+        "far_t=fp/(tn+fp)\n",
+        "frr_t=fn/(tp+fn)\n",
+        "tp,fn,tn,fp=0,0,0,0\n",
+        "for dataj in enumerate(dataloader_v):\n",
+        "    x=dataj[0].float().to(device)\n",
+        "    yh=dataj[1].float().to(device)\n",
+        "    y=facenet(x).view(-1)\n",
+        "    pred=y>threshold\n",
+        "    gt=yh\n",
+        "    tp+=torch.sum(((y>0.5)==gt)[torch.where((gt)==1)]).item()#TP\n",
+        "    fn+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==1)]).item()#FN\n",
+        "    tn+=torch.sum(((y>0.5)==gt)[torch.where((gt)==0)]).item()#TN\n",
+        "    fp+=torch.sum(((y>0.5)!=gt)[torch.where((gt)==0)]).item()#FP\n",
+        "far_v=fp/(tn+fp)\n",
+        "frr_v=fn/(tp+fn)\n",
+        "\n",
+        "hter_t=0.5*(far_t+frr_t)\n",
+        "hter_v=0.5*(far_v+frr_v)\n",
+        "print(hter_t,hter_v)"
+      ]
     }
   ],
   "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "machine_shape": "hm",
+      "provenance": []
+    },
+    "gpuClass": "premium",
     "kernelspec": {
       "display_name": "Python 3",
       "language": "python",
@@ -420,13 +340,7 @@
       "interpreter": {
         "hash": "acb408c112aa627a318ac6bee697c54a21dc0d988d17c05deacc60f98e48531a"
       }
-    },
-    "colab": {
-      "provenance": [],
-      "machine_shape": "hm"
-    },
-    "accelerator": "GPU",
-    "gpuClass": "premium"
+    }
   },
   "nbformat": 4,
   "nbformat_minor": 0
