Add comments & cleaned code

--- a/Training_colab.ipynb
+++ b/Training_colab.ipynb
@@ -70,38 +70,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
-      "metadata": {
-        "id": "f87SfKpvZIpq"
-      },
+      "execution_count": null,
+      "metadata": {},
       "outputs": [],
       "source": [
-        "with open('./db_train.raw', 'rb') as f:\n",
-        "    data = np.fromfile(f, dtype=np.dtype(np.uint8))\n",
-        "    data = data.reshape((111430,56, 56, 3))\n",
-        "with open('./label_train.txt', 'rb') as f:\n",
-        "    label=f.read().splitlines()\n",
-        "    for k,elem in enumerate(label):\n",
-        "        label[k]=int(elem)\n",
-        "    label=np.array(label)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 6,
-      "metadata": {
-        "id": "-ZbXOfplZIpw"
-      },
-      "outputs": [],
-      "source": [
-        "data_0=data[np.where(label==0)[0]]\n",
-        "data_1=data[np.where(label==1)[0]]\n",
-        "data_0_t=data_0[:int(len(data_0)*0.7)]\n",
-        "data_1_t=data_1[:int(len(data_1)*0.7)]\n",
-        "data_0_v=data_0[int(len(data_0)*0.7):]\n",
-        "data_1_v=data_1[int(len(data_1)*0.7):]\n",
-        "train_ds=dataset(data_0_t,data_1_t)\n",
-        "val_ds=dataset(data_0_v,data_1_v)\n",
+        "train_ds,val_ds=generate_datasets('./db_train.raw','./label_train.txt',0.7)\n",
         "dataloader_t = torch.utils.data.DataLoader(train_ds,batch_size=32,shuffle=True,drop_last=False)\n",
         "dataloader_v = torch.utils.data.DataLoader(val_ds,batch_size=32,shuffle=True,drop_last=False)"
       ]
@@ -466,7 +439,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.7"
+      "version": "3.9.7 (tags/v3.9.7:1016ef3, Aug 30 2021, 20:19:38) [MSC v.1929 64 bit (AMD64)]"
     },
     "orig_nbformat": 4,
     "vscode": {
