Edit for train step by step

--- a/Training_colab.ipynb
+++ b/Training_colab.ipynb
@@ -119,10 +119,10 @@
       "outputs": [],
       "source": [
         "optimizer = optim.Adam(facenet.parameters(), lr=3e-4, betas=(0.9, 0.999))\n",
-        "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=4, gamma=0.5,verbose=True)\n",
+        "scheduler = torch.optim.lr_scheduler.StepLR(optimizer, step_size=5, gamma=0.3,verbose=True)\n",
         "alpha1=0.2\n",
         "alpha2=0.2\n",
-        "num_epochs=20\n",
+        "num_epochs=26\n",
         "threshold=0.5"
       ]
     },
@@ -133,6 +133,16 @@
       "outputs": [],
       "source": [
         "training(num_epochs,facenet,optimizer,scheduler,dataloader_t,dataloader_v,device,alpha1,alpha2,threshold,\"/content/results/\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "!zip -q /content/results_1.zip -r /content/results\n",
+        "!cp /content/results_1.zip /content/gdrive/MyDrive/Idemia/"
       ]
     },
     {
